# enterprise_programming_694_mikhail_bogomolov

./: Tests.cpp  quadratic_equation_solver  quadratic_equation_solver.cpp
docs/html/: globals.html  quadratic__equation__solver_8h__incl.dot  quadratic__equation__solver_8h__incl.md5
docs/html/search/: all_2.js  functions_1.js  functions_2.js  searchdata.js
docs/latex/: quadratic__equation__solver_8h.tex  quadratic__equation__solver_8h__incl.dot  quadratic__equation__solver_8h__incl.md5
quadratic_equation/: CMakeLists.txt  Doxyfile  quadratic_equation_solver.h
quadratic_equation/docs/html/: files.html  globals_func.html  quadratic__equation__solver_8h.html  quadratic__equation__solver_8h_source.html
quadratic_equation/docs/html/search/: all_0.js
quadratic_equation/docs/latex/: files.tex  quadratic__equation__solver_8h.tex.tmp  refman.tex
string_sorting/: main  main.cpp  result.txt  text.txt
